# TradingBacktester

./: DEPLOYMENT.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: implementation-plan.md
src/trading_agents_dashboard/: __init__.py  backtest.py  data.py  execution.py  kpis.py  reporting.py  strategies.py
tests/: test_backtesting.py  test_execution.py
