[project]
name = "trading-agents-dashboard"
version = "0.1.0"
description = "Multi-agent trading strategy research dashboard with backtests and KPI scoreboard"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "plotly>=5.0",
  "streamlit>=1.30",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
